# SynsepalumDulcificumLE

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: conan-package.yml  lint-tidier.yml  npm-package.yml  unit-test.yml
DulcificumJS/: .npmrc  README.md  package-lock.json  package.json
DulcificumJS/cpp/: CMakeLists.txt
apps/: CMakeLists.txt
pyDulcificum/: CMakeLists.txt
test/: CMakeLists.txt
test_package/: conanfile.py
